# Engine

./: CMakeLists.txt  Engine.sln  Engine.vcxproj  Engine.vcxproj.filters  LICENSE  README.md  main.cpp  object.cpp
Engine/x64/Debug/: Engine.exe.recipe  Engine.ilk  vc143.idb
Engine/x64/Debug/Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Engine/x64/Release/Engine.tlog/: CL.command.1.tlog  Engine.lastbuildstate
Libaries/include/glad/: glad.h
Libaries/lib/: glfw3.lib
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
include/: object.h  shader.h
src/: glad.c
